Bug 1061702: Stop audio sources from continuing to play garbage after being stopped r=roc  * clear audio callback buffer if no streams have audio